<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_lang"
        android:icon="@drawable/ic_language"
        android:title="සිං / EN"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_theme"
        android:title="@string/theme_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_watch"
        android:checkable="true"
        android:title="@string/watch_background"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings_title"
        app:showAsAction="never" />
</menu>
